# procela

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.txt  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  procela_docstring_check.py  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml
advanced/audit-trail/: index.html
advanced/custom-policies/: index.html
advanced/performance/: index.html
contributing/: index.html
core-concepts/epistemic-signals/: index.html
core-concepts/executive/: index.html
core-concepts/governance/: index.html
core-concepts/mechanisms/: index.html
core-concepts/variables/: index.html
docs/: api.md  contributing.md  index.md
docs/core/: epistemic-signals.md  governance.md  mechanisms.md
docs/core-concepts/: executive.md  variables.md
docs/examples/: index.md  temperature-simulation.md
docs/getting-started/: first-simulation.md  installation.md  quickstart.md
docs/semantics/: key.md  time.md
examples/amr/: README.md  main.py  requirement.txt  requirements.txt
examples/amr-case-study/: index.html
examples/beginner/: basic-governance.py  multiple-variables.py  simple-growth.py  temperature-simulation.py
examples/other-domains/: index.html
examples/temperature-simulation/: index.html
getting-started/first-simulation/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
procela/: __init__.py
procela/core/: __init__.py  exceptions.py  key_authority.py  logger.py  timer.py
procela/math/: __init__.py
procela/symbols/: __init__.py  key.py  time.py
semantics/key/: index.html
semantics/time/: index.html
tests/core/: test_action_policy.py  test_action_proposal.py  test_action_proposer.py  test_action_resolver.py  test_action_validator.py  test_assessment_anomaly.py  test_assessment_diagnosis.py  test_assessment_planning.py  test_assessment_prediction.py  test_assessment_reasoning.py  test_assessment_statistics.py  test_assessment_task.py  test_assessment_trend.py  test_epistemic_base.py  test_epistemic_executive.py  test_epistemic_planning.py  test_epistemic_variable.py  test_execution_step.py  test_execution_trace.py  test_executive_base.py  test_invariant_category.py  test_invariant_exceptions.py  (+58 more)
(+191 files in other folders)
