[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "procela"
version = "1.0.0"
description = "Epistemic Governance in Mechanistic Simulations Under Structural Uncertainty"
authors = [
    { name = "Kinson Vernet", email = "kinson.vernet@gmail.com" }
]
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://procela.org"
Documentation = "https://docs.procela.org/"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pre-commit>=3.6",
    "black==24.1.0",
    "ruff==0.4.4",
    "isort==7.0.0",
    "mypy==1.8.0",
    "pydocstyle>=6.3",
]
docs = []
notebooks = []

[tool.setuptools.packages.find]
include = ["procela*"]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
combine_as_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-v",
    "--durations=10",
    "--cov=procela",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = []

[tool.coverage.run]
source = ["procela"]
omit = [
    "procela/**/__pycache__/*",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
